@@ -1,3 +1,8 @@
+2003-12-02  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* generic/tkMenu.c (MenuVarProc): prevent this from triggering
+	while interp is being destroyed.
+
 2003-11-21  Benjamin Riefenstahl  <Benjamin.Riefenstahl@epost.de>
 
 	*** 8.4.5 TAGGED FOR RELEASE ***
